objects/JBCXM__SurveyResponseTask__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Response Task</relationshipLabel>
        <relationshipName>Survey_Response_Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship</description>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>Survey Response Task</relationshipLabel>
        <relationshipName>SurveyResponeTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyParticipant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Participant</label>
        <referenceTo>JBCXM__SurveyParticipant__c</referenceTo>
        <relationshipName>SurveyResponseTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
        <relationshipName>SurveyResponseTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>JBCXM__Survey__c</referenceTo>
        <relationshipName>SurveyResponseTask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskId__c</fullName>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Survey Response Task</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>JBCXM__Account__c</columns>
        <columns>JBCXM__Survey__c</columns>
        <columns>JBCXM__SurveyParticipant__c</columns>
        <columns>JBCXM__SurveyQuestion__c</columns>
        <columns>JBCXM__TaskId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Response Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>